tests/invalid/global_variables/variable_used_as_fun.rs
/*
fail: 1
*/

foo: i64 = 3;

main(): i32 {
    return foo();
}